--- a/package.json
+++ b/package.json
@@ -8,7 +8,13 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@dvuckovic/vue3-bootstrap-icons": "^1.0.4",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.0.0-beta3",
+    "bootstrap-icons": "^1.5.0",
     "core-js": "^3.6.5",
+    "emailjs-com": "^3.2.0",
+    "popper.js": "^1.16.1",
     "vue": "^3.0.0"
   },
   "devDependencies": {
@@ -18,7 +24,9 @@
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^7.0.0"
+    "eslint-plugin-vue": "^7.0.0",
+    "node-sass": "^6.0.1",
+    "sass-loader": "^10.2.0"
   },
   "eslintConfig": {
     "root": true,
